# gpt-cli

./: .flake8  .gitignore  Dockerfile  LICENSE  README.fr.md  README.md  flake.nix  gpt  gpt.py  gpt.yml.template  main.py  package.nix  pyproject.toml  requirements.txt  requirements_docker.txt
.github/workflows/: pypi-publish.yml  python-app.yml
gptcli/: __main__.py  anthropic.py  assistant.py  cli.py  cohere.py  completion.py  composite.py  config.py  conversation.md  cost.py  google.py  gpt.py  interpreter.py  llama.py  logging.py  logging_utils.py  mistral.py  openai.py  renderer.py  serializer.py  session.py  shell.py  term_utils.py  together.py
gptcli/providers/: anthropic.py  azure_openai.py  dolphin.py  google.py  grok.py  openai.py  xai.py
gptcli/telegram/: aws_lambda.py  bot.py  lambda.py  listeners.py
tests/: test_assistant.py  test_cli_i18n.py  test_gpt.py  test_serialize.py  test_session.py  test_term_utils.py
