[project]
name = "gpt-command-line"
version = "0.1.6"
description = "Command-line interface for ChatGPT, Claude and Bard"
authors = [{name = "Val Kharitonov", email = "val@kharvd.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["cli", "command-line", "assistant", "openai", "claude", "bard", "gpt-3", "gpt-4", "llm", "chatgpt", "gpt-cli", "google-bard", "anthropic", "gpt-client", "anthropic-claude", "palm2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic==0.25.9",
    "attrs==23.2.0",
    "black==24.4.2",
    "mistralai==0.1.8",
    "google-generativeai==0.1.0",
    "openai==1.30.1",
    "prompt-toolkit==3.0.43",
    "pytest==7.3.1",
    "PyYAML==6.0.1",
    "rich==13.7.1",
    "typing_extensions==4.11.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python==0.2.74",
]

[project.urls]
"Homepage" = "https://github.com/kharvd/gpt-cli"

[project.scripts]
gpt = "gptcli.gpt:main"

[build-system]
requires = ["pip>=23.0.0", "setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

