[project]
name = "gpt-command-line"
version = "0.3.2"
description = "Command-line interface for ChatGPT and Claude"
authors = [{name = "Val Kharitonov", email = "val@kharvd.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["cli", "command-line", "assistant", "openai", "claude", "cohere", "gpt-3", "gpt-4", "llm", "chatgpt", "gpt-cli", "anthropic", "gpt-client", "anthropic-claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic~=0.44.0",
    "attrs~=24.2.0",
    "black~=24.10.0",
    "cohere~=5.13.11",
    "google-generativeai~=0.8.4",
    "openai~=1.60.0",
    "prompt-toolkit~=3.0.48",
    "pytest~=8.3.3",
    "PyYAML~=6.0.2",
    "rich~=13.9.4",
    "typing_extensions~=4.12.2",
    "pydantic<2",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python==0.2.74",
]

[project.urls]
"Homepage" = "https://github.com/kharvd/gpt-cli"

[project.scripts]
gpt = "gptcli.gpt:main"

[build-system]
requires = ["pip>=23.0.0", "setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

